# Advent-of-Code

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
2015/: README.md
2015/src/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  (+18 more)
2016/: README.md
2017/: README.md
2018/: README.md
2019/: .gitignore  README.md
2020/: .gitignore  Cargo.toml  README.md
2021/: .gitignore  README.md  mypy.ini  setup.cfg  tox.ini
2021/input/: README.md
2021/src/: 01.py  01_up.py  02.py  02_up.py  03.py  04.py  05.py
2021/src/aoc2021/: __init__.py  __main__.py  cli.py  lib.py
2021/src/aoc2021/solutions/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
2021/src/aoc2021/solutions_extra/: __init__.py  day01.py  day02.py  day04.py
2021/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day25.py
2022/: .gitignore  .sdkmanrc  build.sbt
aoc2022/: build.sbt
aoc2023/: README.md
aoc2024/: pom.xml
aoc2025/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
(+345 files in other folders)
