[metadata]
name = aoc2021
version = 0.1.0
description = Solutions for the advent of code 2021 challenge
long_description = file: README.md
long_description_content_type = text/markdown
author = Stanislav Schmidt
license = MIT

[options]
package_dir =
    = src
packages = find:

[options.extras_require]
dev = build; tox; twine

[options.entry_points]
console_scripts =
    aoc = aoc2021.cli:main

[options.packages.find]
where = src
